Minor fixes to the ICSE workshop deadlines.

--- a/_data/conferences.yml
+++ b/_data/conferences.yml
@@ -129,7 +129,7 @@
   link: https://conf.researchr.org/home/icse-2026/agent-2026
   deadline:
   - "2025-10-20 23:59"
-  date: April 12 - April 18, 2026
+  date: April 12 - April 18, 2026 with ICSE 2026
   place: Rio de Janeiro, Brazil
   tags: [WO]
 
@@ -139,7 +139,7 @@
   link: https://conf.researchr.org/home/icse-2026/ai-sqe-2026
   deadline:
   - "2025-10-20 23:59"
-  date: April 12 - April 18, 2026
+  date: April 12 - April 18, 2026 with ICSE 2026
   place: Rio de Janeiro, Brazil
   tags: [WO]
 
@@ -149,7 +149,7 @@
   link: https://botse.github.io/
   deadline:
   - "2025-10-20 23:59"
-  date: April 12 - April 18, 2026
+  date: April 12 - April 18, 2026 with ICSE 2026
   place: Rio de Janeiro, Brazil
   tags: [WO]
 
@@ -159,7 +159,7 @@
   link: https://conf.researchr.org/home/icse-2026/deeptest-2026#Call-for-Papers
   deadline:
   - "2025-10-20 23:59"
-  date: April 12 - April 18, 2026
+  date: April 12 - April 18, 2026 with ICSE 2026
   place: Rio de Janeiro, Brazil
   tags: [WO]
 
@@ -169,7 +169,7 @@
   link: https://conf.researchr.org/home/icse-2026/designing-2026#Call-for-Papers
   deadline:
   - "2025-10-20 23:59"
-  date: April 12 - April 18, 2026
+  date: April 12 - April 18, 2026 with ICSE 2026
   place: Rio de Janeiro, Brazil
   tags: [WO]
 
@@ -179,7 +179,7 @@
   link: https://conf.researchr.org/home/icse-2026/dse-2026
   deadline:
   - "2025-10-20 23:59"
-  date: April 12 - April 18, 2026
+  date: April 12 - April 18, 2026 with ICSE 2026
   place: Rio de Janeiro, Brazil
   tags: [WO]
 
@@ -189,7 +189,7 @@
   link: https://conf.researchr.org/home/icse-2026/encycris-2026
   deadline:
   - "2025-10-20 23:59"
-  date: April 12 - April 18, 2026
+  date: April 12 - April 18, 2026 with ICSE 2026
   place: Rio de Janeiro, Brazil
   tags: [WO]
 
@@ -199,7 +199,7 @@
   link: https://conf.researchr.org/home/icse-2026/finanse-2026
   deadline:
   - "2025-10-20 23:59"
-  date: April 12 - April 18, 2026
+  date: April 12 - April 18, 2026 with ICSE 2026
   place: Rio de Janeiro, Brazil
   tags: [WO]
 
@@ -207,10 +207,10 @@
   description: International Flaky Tests Workshop
   year: 2026
   link: https://conf.researchr.org/home/icse-2026/ftw-2026
-  deadline:
+  deadline: 
   - "2025-10-20 23:59"
-  date: April 12 - April 18, 2026
-  place: Rio de Janeiro, Brazil
+  date: April 18, 2026 with ICSE 2026
+  place: Rio de Janeiro
   tags: [WO]
 
 - name: GAS
@@ -219,7 +219,7 @@
   link: https://conf.researchr.org/home/icse-2026/gas-2026
   deadline:
   - "2025-10-20 23:59"
-  date: April 12 - April 18, 2026
+  date: April 12 - April 18, 2026 with ICSE 2026
   place: Rio de Janeiro, Brazil
   tags: [WO]
 
@@ -229,7 +229,7 @@
   link: https://geneticimprovementofsoftware.com/events/icse2026
   deadline:
   - "2025-10-20 23:59"
-  date: April 12 - April 18, 2026
+  date: April 12 - April 18, 2026 with ICSE 2026
   place: Rio de Janeiro, Brazil
   tags: [WO]
 
@@ -239,7 +239,7 @@
   link: https://greensworkshop.github.io/
   deadline:
   - "2025-10-20 23:59"
-  date: April 12 - April 18, 2026
+  date: April 12 - April 18, 2026 with ICSE 2026
   place: Rio de Janeiro, Brazil
   tags: [WO]
 
@@ -249,7 +249,7 @@
   link: https://ide-workshop.github.io/
   deadline:
   - "2025-10-20 23:59"
-  date: April 12 - April 18, 2026
+  date: April 12 - April 18, 2026 with ICSE 2026
   place: Rio de Janeiro, Brazil
   tags: [WO]
 
@@ -259,7 +259,7 @@
   link: https://conf.researchr.org/home/icse-2026/iwsib-2026
   deadline:
   - "2025-10-20 23:59"
-  date: April 12 - April 18, 2026
+  date: April 12 - April 18, 2026 with ICSE 2026
   place: Rio de Janeiro, Brazil
   tags: [WO]
 
@@ -269,7 +269,7 @@
   link: https://conf.researchr.org/home/icse-2026/jaws-2026
   deadline:
   - "2025-10-20 23:59"
-  date: April 12 - April 18, 2026
+  date: April 12 - April 18, 2026 with ICSE 2026
   place: Rio de Janeiro, Brazil
   tags: [WO]
 
@@ -279,7 +279,7 @@
   link: https://conf.researchr.org/home/icse-2026/larc-2026
   deadline:
   - "2025-10-20 23:59"
-  date: April 12 - April 18, 2026
+  date: April 12 - April 18, 2026 with ICSE 2026
   place: Rio de Janeiro, Brazil
   tags: [WO]
 
@@ -289,7 +289,7 @@
   link: https://llm4code.github.io/
   deadline:
   - "2025-10-20 23:59"
-  date: April 12 - April 18, 2026
+  date: April 12 2026 with ICSE 2026
   place: Rio de Janeiro, Brazil
   tags: [WO]
 
@@ -299,7 +299,7 @@
   link: https://mo2re.github.io/
   deadline:
   - "2025-10-20 23:59"
-  date: April 12 - April 18, 2026
+  date: April 12 - April 18, 2026 with ICSE 2026
   place: Rio de Janeiro, Brazil
   note: Mandatory abstract submission deadline on Oct 13, 2025.
   tags: [WO]
@@ -310,7 +310,7 @@
   link: https://conf.researchr.org/home/icse-2026/mssis-2026
   deadline:
   - "2025-10-20 23:59"
-  date: April 12 - April 18, 2026
+  date: April 12 - April 18, 2026 with ICSE 2026
   place: Rio de Janeiro, Brazil
   tags: [WO]
 
@@ -320,7 +320,7 @@
   link: https://nlbse2026.github.io/
   deadline:
   - "2025-10-20 23:59"
-  date: April 12 - April 18, 2026
+  date: April 12 - April 18, 2026 with ICSE 2026
   place: Rio de Janeiro, Brazil
   tags: [WO]
 
@@ -330,7 +330,7 @@
   link: https://conf.researchr.org/home/icse-2026/nse-2026
   deadline:
   - "2025-10-20 23:59"
-  date: April 12 - April 18, 2026
+  date: April 12 - April 18, 2026 with ICSE 2026
   place: Rio de Janeiro, Brazil
   tags: [WO]
 
@@ -340,7 +340,7 @@
   link: https://conf.researchr.org/home/icse-2026/q-se-2026
   deadline:
   - "2025-10-20 23:59"
-  date: April 12 - April 18, 2026
+  date: April 12 - April 18, 2026 with ICSE 2026
   place: Rio de Janeiro, Brazil
   tags: [WO]
 
@@ -350,7 +350,7 @@
   link: https://conf.researchr.org/home/icse-2026/raie-2026
   deadline:
   - "2025-10-20 23:59"
-  date: April 12 - April 18, 2026
+  date: April 12 - April 18, 2026 with ICSE 2026
   place: Rio de Janeiro, Brazil
   tags: [WO]
 
@@ -360,7 +360,7 @@
   link: https://conf.researchr.org/home/icse-2026/raise-2026
   deadline:
   - "2025-10-20 23:59"
-  date: April 12 - April 18, 2026
+  date: April 12 - April 18, 2026 with ICSE 2026
   place: Rio de Janeiro, Brazil
   tags: [WO]
 
@@ -370,7 +370,7 @@
   link: https://conf.researchr.org/home/recode26
   deadline:
   - "2025-10-20 23:59"
-  date: April 12 - April 18, 2026
+  date: April 12 - April 18, 2026 with ICSE 2026
   place: Rio de Janeiro, Brazil
   tags: [WO]
 
@@ -380,7 +380,7 @@
   link: https://search-based-and-fuzz-testing.github.io/sbft26/
   deadline:
   - "2025-10-20 23:59"
-  date: April 12 - April 18, 2026
+  date: April 12 - April 18, 2026 with ICSE 2026
   place: Rio de Janeiro, Brazil
   tags: [WO]
 
@@ -390,7 +390,7 @@
   link: https://conf.researchr.org/home/icse-2026/seigs-2026
   deadline:
   - "2025-10-20 23:59"
-  date: April 12 - April 18, 2026
+  date: April 12 - April 18, 2026 with ICSE 2026
   place: Rio de Janeiro, Brazil
   tags: [WO]
 
@@ -410,7 +410,7 @@
   link: https://conf.researchr.org/home/icse-2026/sers-2026
   deadline:
   - "2025-10-20 23:59"
-  date: April 12 - April 18, 2026
+  date: April 12 - April 18, 2026 with ICSE 2026
   place: Rio de Janeiro, Brazil
   tags: [WO]
 
@@ -420,7 +420,7 @@
   link: https://conf.researchr.org/home/icse-2026/sesos-2026
   deadline:
   - "2025-10-20 23:59"
-  date: April 12 - April 18, 2026
+  date: April 12 - April 18, 2026 with ICSE 2026
   place: Rio de Janeiro, Brazil
   tags: [WO]
 
@@ -430,7 +430,7 @@
   link: https://conf.researchr.org/home/icse-2026/static-2026
   deadline:
   - "2025-10-20 23:59"
-  date: April 12 - April 18, 2026
+  date: April 12 - April 18, 2026 with ICSE 2026
   place: Rio de Janeiro, Brazil
   tags: [WO]
 
@@ -440,7 +440,7 @@
   link: https://conf.researchr.org/home/icse-2026/svm-2026
   deadline:
   - "2025-10-20 23:59"
-  date: April 12 - April 18, 2026
+  date: April 12 - April 18, 2026 with ICSE 2026
   place: Rio de Janeiro, Brazil
   tags: [WO]
 
@@ -450,7 +450,7 @@
   link: https://conf.researchr.org/home/icse-2026/swebok-2026
   deadline:
   - "2025-10-20 23:59"
-  date: April 12 - April 18, 2026
+  date: April 12 - April 18, 2026 with ICSE 2026
   place: Rio de Janeiro, Brazil
   tags: [WO]
 
@@ -460,7 +460,7 @@
   link: https://conf.researchr.org/home/icse-2026/uise-2026
   deadline:
   - "2025-10-20 23:59"
-  date: April 12 - April 18, 2026
+  date: April 12 - April 18, 2026 with ICSE 2026
   place: Rio de Janeiro, Brazil
   tags: [WO]
 
@@ -470,17 +470,17 @@
   link: https://conf.researchr.org/home/icse-2026/wetseb-2026
   deadline:
   - "2025-10-20 23:59"
-  date: April 12 - April 18, 2026
+  date: April 12 - April 18, 2026 with ICSE 2026
   place: Rio de Janeiro, Brazil
   tags: [WO]
 
 - name: WSESE
   description: International Workshop on Methodological Issues with Empirical Studies in Software Engineering
   year: 2026
-  link: https://conf.researchr.org/home/icse-2026/wses-2026
+  link: https://conf.researchr.org/home/icse-2026/wsese-2026
   deadline:
   - "2025-10-20 23:59"
-  date: April 12 - April 18, 2026
+  date: April 12 - April 18, 2026 with ICSE 2026
   place: Rio de Janeiro, Brazil
   tags: [WO]
 
@@ -552,16 +552,6 @@
   - "2024-11-11 23:59"
   date: April 26 - May 4, 2025 with ICSE 2025
   place: Ottawa, Ontario, Canada
-  tags: [WO]
-
-- name: FTW
-  description: International Flaky Tests Workshop
-  year: 2026
-  link: https://conf.researchr.org/home/icse-2026/ftw-2026
-  deadline: 
-  - "2025-10-20 23:59"
-  date: April 18, 2026 with ICSE 2026
-  place: Rio de Janeiro
   tags: [WO]
 
 - name: Gamify
