--- a/_data/conferences.yml
+++ b/_data/conferences.yml
@@ -1748,3 +1748,13 @@
   deadline:
   - "2026-03-01 23:59"
   tags: [JO]
+
+- name: Data4SoftSec
+  description: The 1st Workshop on Datasets for Software Security
+  year: 2026
+  link: https://sites.google.com/view/data4softsec/home
+  deadline:
+  - "2026-02-01 23:59"
+  date: May 21, 2026
+  tags: [WO]
+  
